test/types/string/bradc/string2ints/emptyToInt64.good
emptyToInt64.chpl:2: error: Empty string when converting from string to int(64)
