test/types/string/bradc/string2ints/emptyToInt64.chpl
var e = "";
var x = e:int(64);

writeln("x is: ", x);
